--- a/proyects/templates/index.html
+++ b/proyects/templates/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Projects</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Document</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #1f263d;
             padding: 20px;
             text-align: center;
         }
         .container {
-            background-color: white;
+            background-color: #f3ebd9;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             display: inline-block;
         }
         h1 {
-            color: #333;
+            color: #000000;
         }
         .btn {
             padding: 10px 20px;
-            background-color: #007BFF;
+            background-color: #1f263d;
             color: white;
             border: none;
             border-radius: 5px;
@@ -31,15 +32,15 @@
             font-size: 16px;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #374b8a;
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <h1>Bienvenido a la API de Proyectos</h1>
-        <p>Consulta todos los proyectos disponibles a través del botón de abajo:</p>
-        <a href="/api/projects" class="btn">Ver Proyectos</a>
-    </div>
-</body>
+    <body>
+        <div class="container">
+            <h1>Bienvenido a la API de Proyectos</h1>
+            <p>Consulta todos nuestros proyectos disponibles a través del botón de abajo:</p>
+            <a href="/api/projects" class="btn">Ver Proyectos</a>
+        </div>
+    </body>
 </html>
